# zephyr

./: west.yml
boards/adi/apard32690/: apard32690_max32690_m4.dts
boards/adi/swiot1l/: Kconfig.defconfig  Kconfig.swiot1l  board.cmake  board.yml  swiot1l_max32650.dts  swiot1l_max32650.yaml
drivers/ethernet/: eth_adin2111.c
drivers/gpio/: gpio_max32.c
drivers/pinctrl/: pinctrl_max32.c
drivers/serial/: uart_max32.c
include/zephyr/posix/: signal.h
samples/application_development/adin6310/src/: main.c
samples/cpp/hart/: CMakeLists.txt  prj.conf
samples/cpp/hart/src/: main.cpp
soc/adi/max32/: Kconfig  Kconfig.defconfig.max32650  Kconfig.soc  soc.yml
